<resources>
    <string name="app_name">Rectangle Calculator JP</string>
    <string name="joshua_phinazee_s_rectangle_calculator">Joshua Phinazee\'s Rectangle Calculator</string>
    <string name="length">Length</string>
    <string name="height">Height</string>
    <string name="perimeter">Perimeter</string>
    <string name="area">Area</string>
    <string name="calculate">Calculate</string>
</resources>